--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,9 @@
 html,
 body {
+  --dark-color: #1C1C1C;
+  --light-color: #F9F8F9;
+
+
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
