--- a/components/MainTitle/MainTitle.module.css
+++ b/components/MainTitle/MainTitle.module.css
@@ -1,8 +1,8 @@
 .title {
     font-family: 'Roboto';
-font-style: normal;
+    font-style: normal;
     font-size: 36px;
-    font-weight: 600;
+    font-weight: bold;
     padding: 0;
     margin: 0;
 }
