--- a/components/Text/Text.module.css
+++ b/components/Text/Text.module.css
@@ -1,17 +1,19 @@
-.mainText {
+.text {
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 600;
-    font-size: 16px;
-    line-height: 30px;
     color: #1C1C1C;
 }
 
+.mainText {
+    font-size: 16px;
+    line-height: 30px;
+    
+}
+
 .subText {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 600;
+
     font-size: 12px;
     line-height: 20px;
-    color: #1C1C1C;
+
 }
