--- a/components/Logo/Logo.module.css
+++ b/components/Logo/Logo.module.css
@@ -1,6 +1,6 @@
 .logo {
-    font-weight: bold;
-    font-size: 28px;
-    color: #1C1C1C;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: bold;
+  font-size: 28px;
+  color: #1c1c1c;
+  margin: 0;
 }
