--- a/components/NavBar/NavBar.module.css
+++ b/components/NavBar/NavBar.module.css
@@ -1,8 +1,21 @@
+.nav {
+  display: flex;
+  width: 100vw;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  height: 80px;
+  position: absolute;
+  padding: 0 10vw;
+  z-index: 99;
+}
+
 .menu {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    max-width: 550px;
-    padding: 0;
-    margin: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  max-width: 550px;
+  width: 100%;
+  padding: 0;
+  margin: 0;
 }
