--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,32 +1,20 @@
 :root {
-  --dark-color: #1C1C1C;
-  --light-color: #F9F8F9;
+  --dark-color: #1c1c1c;
+  --light-color: #f9f8f9;
 }
 
-html,
 body {
+  background-color: #f9f8f9;
+}
 
+* {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  box-sizing: border-box;
+  font-family: "Roboto";
 }
 
 a {
   color: inherit;
   text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
 }
