add ground section

--- a/components/ArticleItem/ArticleItem.module.css
+++ b/components/ArticleItem/ArticleItem.module.css
@@ -4,6 +4,10 @@
     margin-bottom: 30px;
 }
 
+.container p {
+    margin-top: 10px;
+}
+
 .imageContainer {
     border-radius: 8px;
     overflow: hidden;
