--- a/components/StorySection/StorySection.module.css
+++ b/components/StorySection/StorySection.module.css
@@ -1,5 +1,10 @@
-.container {
+.storyContainer {
     display: flex;
     flex-direction: row;
     justify-content: center;
+}
+
+.container h2 {
+    padding: 70px 0;
+    text-align: center;
 }
