--- a/components/AboutSection/AboutSection.module.css
+++ b/components/AboutSection/AboutSection.module.css
@@ -1,16 +1,18 @@
-.section {
+.container {
   overflow: hidden;
   width: 100%;
   height: 850px;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   position: relative;
+  border-bottom: 4px solid var(--dark-color)
 }
 
 .ttochiContent {
   width: 460px;
   height: 550px;
   align-self: center;
+  margin-left: 10%;
 }
 
 .ttochiContent h2 {
@@ -21,6 +23,7 @@
   width: 460px;
   height: 550px;
   align-self: center;
+  margin-right: 10%;
 }
 
 .bollyContent h2,
