add editor page component

--- a/ckeditor5/sample/styles.css
+++ b/ckeditor5/sample/styles.css
@@ -30,6 +30,7 @@ main .ck-editor[role='application'] .ck.ck-content,
 	line-height: 1.6em;
 	min-height: var(--ck-sample-editor-min-height);
 	padding: 1.5em 2em;
+	min-height: 500px;
 }
 
 .ck.ck-editor__editable {
