--- a/components/EditorPage/EditorPage.module.css
+++ b/components/EditorPage/EditorPage.module.css
@@ -1,5 +1,5 @@
 .container form {
-    margin-left: 15%;
-    width: 70%;
-    margin-top: 150px;
+    margin-left: 25%;
+    width: 50%;
+    padding-top: 150px;
 }
