--- a/components/StoryDetailPage/StoryDetailPage.module.css
+++ b/components/StoryDetailPage/StoryDetailPage.module.css
@@ -1,8 +1,8 @@
 .container {
     display: flex;
+    justify-content: center;
     align-items: center;
-    max-width: 80%;
-    margin-left: 10%;
+    margin: 0 auto;
 }
 
 .articleContainer {
