--- a/components/StoryPage/StoryPage.module.css
+++ b/components/StoryPage/StoryPage.module.css
@@ -1,6 +1,7 @@
 .container {
-    margin-left: 20%;
-    width: 60%;
+    margin: 0 auto;
+    width: 100%;
+    max-width: 760px;
     display: flex;
     flex-direction: column;
 }
