--- a/components/LoginPage/LoginPage.module.css
+++ b/components/LoginPage/LoginPage.module.css
@@ -1,7 +1,9 @@
 .container {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 20px;
     width: 100vw;
     height: 100vh;
 }
